Spacing for checkbox was fixed so it looks normal on mobile now

--- a/css/main.css
+++ b/css/main.css
@@ -355,7 +355,6 @@ input[type='checkbox'] {
   display: inline-block;
   height: 1em;
   padding-left: 1em;
-  padding-bottom: 3em;
   width: 1em;
   color: #818476;
 }
